crates/compiler/tests/snapshots/tokenizer_test__should_scan-12.snap
---
source: crates/compiler/tests/tokenizer_test.rs
expression: "<a></a < / attr attr=\">\" >"

---
- StartTag:
    name: a
    attributes: []
    self_closing: false
- EndTag: a

