crates/compiler/tests/snapshots/tokenizer_test__should_scan-13.snap
---
source: crates/compiler/tests/tokenizer_test.rs
expression: "<a attr=\"1123"

---
- StartTag:
    name: a
    attributes:
      - name: attr
        value:
          content: "1123"
          location:
            start: "Pos: 8, Ln: 1, Col: 9"
            end: "Pos: 13, Ln: 1, Col: 14"
        name_loc:
          start: "Pos: 3, Ln: 1, Col: 4"
          end: "Pos: 7, Ln: 1, Col: 8"
        location:
          start: "Pos: 3, Ln: 1, Col: 4"
          end: "Pos: 13, Ln: 1, Col: 14"
    self_closing: false

