crates/compiler/tests/snapshots/tokenizer_test__should_scan-18.snap
---
source: crates/compiler/tests/tokenizer_test.rs
expression: "<!-- nested <!--> text -->"

---
- Comment: " nested <!"
- Text: " text -->"

