crates/compiler/tests/snapshots/tokenizer_test__should_scan-2.snap
---
source: crates/compiler/tests/tokenizer_test.rs
expression: "{{}}"

---
- Interpolation: "{{}}"

