crates/compiler/tests/snapshots/tokenizer_test__should_scan-3.snap
---
source: crates/compiler/tests/tokenizer_test.rs
expression: "{{test}}"

---
- Interpolation: "{{test}}"

